--- a/covid-project/src/Map.css
+++ b/covid-project/src/Map.css
@@ -5,36 +5,38 @@
     border-radius: 20px;
     margin-top: 16px;
     box-shadow: 0 0 8px -4px rgba(0, 0, 0, 0.5);
-}
-.map .leaflet-container {
+  }
+  
+  .map .leaflet-container {
     height: 100%;
-}
-
-info-flag img{
+    border-radius: 12px;
+  }
+  
+  .info-flag img {
     width: 100px;
     border-radius: 5px;
-}
-
-.info-name {
+  }
+  
+  .info-name {
     font-size: 20px;
     font-weight: bold;
     color: #555;
-}
-
-.info-flag {
+  }
+  
+  .info-container {
+    width: 150px;
+  }
+  
+  .info-flag {
     height: 80px;
     width: 100%;
     background-size: cover;
     border-radius: 8px;
-}
-
-.info-confirme,
-.info-recovered,
-.info-deaths {
+  }
+  
+  .info-confirmed,
+  .info-recovered,
+  .info-deaths {
     font-size: 16px;
     margin-top: 5px;
-}
-
-info-container {
-    width: 150px;
-}
+  }
