--- a/covid-project/src/Table.css
+++ b/covid-project/src/Table.css
@@ -1,19 +1,21 @@
 .table {
     margin-top: 20px;
     overflow: scroll;
-    height: 400px;
     color: #6a5d5d;
-    background-color: whites;
-}
-
-.table tr {
+    background-color: white;
+    height: 400px;
+  }
+  
+  .table tr {
     display: flex;
     justify-content: space-between;
-}
-.table td {
+  }
+  
+  .table td {
     padding: 0.5rem;
-}
-
-.table tr:nth-of-type(odd) {
+    border: none;
+  }
+  
+  .table tr:nth-of-type(odd) {
     background-color: #f3f2f8;
-}
+  }
